--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
-  background-color: #1e1e1e;
+  background-color: var(--background-color)
   border-top: 2px solid white;
   padding: 10px 0;
 }
@@ -14,7 +14,7 @@
   flex-direction: column;
   align-items: center;
   text-decoration: none;
-  color: white;
+  color: var(--text-color)
   flex: 1;
 }
 
